Fixed alignment issue in holder list

--- a/src/app/feed/post/holder/holder.component.css
+++ b/src/app/feed/post/holder/holder.component.css
@@ -64,7 +64,7 @@
 
   width: 100%;
   height: 100%;
-  font-size: 1.6vh;
+  font-size: 1.8vh;
   font-family: 'Comfortaa';
   font-weight: bold;
 
@@ -74,7 +74,7 @@
 
   text-align: left;
   position: absolute;
-  bottom: 0%;
+  top: 0%;
   letter-spacing: 0.15em;
 
 }
@@ -93,7 +93,7 @@
 
   right: 0%;
   position: absolute;
-  bottom: 0%;
+  top: 0%;
 
 }
 
